challenge 10/webdb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webdb-service
  namespace: sbarnoussi
spec:
  selector:
    app: webdb
  ports:
  - protocol: TCP
    port: 80       # Port exposé par le Service
    targetPort: 5000 # Port sur lequel l'application écoute dans le Pod
  type: ClusterIP
