challenge 10/webnodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webnodb-deployment
  namespace: sbarnoussi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webnodb
  template:
    metadata:
      labels:
        app: webnodb
    spec:
      containers:
      - name: webnodb
        image: bellator2611/flask-docker-app:latest
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: "100m"       # 1/10 CPU
            memory: "100Mi"   # 100 MiB RAM
          limits:
            cpu: "200m"       # 1/5 CPU
            memory: "200Mi"   # 200 MiB RAM

---
apiVersion: v1
kind: Service
metadata:
  name: webdb-service
  namespace: sbarnoussi
spec:
  selector:
    app: webdb
  ports:
  - protocol: TCP
    port: 80       # Port exposé par le Service
    targetPort: 5000 # Port sur lequel l'application écoute dans le Pod
  type: ClusterIP
